--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <title>Manipulación del DOM</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
