Including more tags and content within body structure

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Manipulación del DOM</title>
+    <title>Manipulación del DOM</title>
 </head>
+
 <body>
     <header>
-
+        <h1>Mi Página de Manipulación del DOM</h1>
     </header>
     <main>
         <section>
-
+            <div>
+                <p>¡Haz clic para cambiar el estilo!</p>
+            </div>
+            <button>Cambiar Estilo</button>
         </section>
     </main>
     <footer>
-        
+        &copy; 2025 Mi Página de Manipulación del DOM. Todos los derechos reservados.
     </footer>
 </body>
+
 </html>
