Initial styles coded

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabeceraypie">
         <h1>Mi Página de Manipulación del DOM</h1>
     </header>
     <main>
@@ -21,7 +21,7 @@
             <button>Cambiar Estilo</button>
         </section>
     </main>
-    <footer>
+    <footer class="cabeceraypie">
         &copy; 2025 Mi Página de Manipulación del DOM. Todos los derechos reservados.
     </footer>
 </body>
