--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <!-- Link to CSS style file. -->
     <link rel="stylesheet" href="styles.css">
     <title>Manipulación del DOM</title>
 </head>
@@ -14,10 +15,12 @@
         <h1>Mi Página de Manipulación del DOM</h1>
     </header>
     <main>
+        <!-- This section contains the <div> object and the <p> text within it. -->
         <section>
             <div>
                 <p>¡Haz clic para cambiar el estilo!</p>
             </div>
+            <!-- This button will trigger the style change when clicked. -->
             <button>Cambiar Estilo</button>
         </section>
     </main>
@@ -25,6 +28,7 @@
         &copy; 2025 Mi Página de Manipulación del DOM. Todos los derechos reservados.
     </footer>
 
+    <!-- Link to JS script file. -->
     <script src="script.js"></script>
 </body>
 
